swagger: 🩹 return for /sign-in just access_token
