# docs/swagger.json
@@ -36,9 +36,9 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "OK",
+                        "description": "access_token",
                         "schema": {
-                            "$ref": "#/definitions/v1.signInResponse"
+                            "type": "string"
                         }
                     },
                     "400": {
@@ -462,17 +462,6 @@
             "properties": {
                 "message": {
                     "type": "string"
-                }
-            }
-        },
-        "v1.signInResponse": {
-            "type": "object",
-            "properties": {
-                "accessToken": {
-                    "type": "string"
-                },
-                "user": {
-                    "$ref": "#/definitions/domain.User"
                 }
             }
         }
