# internal/transport/rest/v1/response.go
@@ -2,14 +2,8 @@ package v1
 
 import (
 	"github.com/gin-gonic/gin"
-	"github.com/popeskul/qna-go/internal/domain"
 	"github.com/sirupsen/logrus"
 )
-
-type signInResponse struct {
-	AccessToken string      `json:"accessToken"`
-	User        domain.User `json:"user"`
-}
 
 // errorResponse is the error response
 type errorResponse struct {
